@@ -70,10 +70,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			    <configuration>
-    	    		<jvmArguments>--add-modules java.xml.bind</jvmArguments>
-        			<mainClass>org.springframework.samples.petclinic.PetClinicApplication</mainClass>
-    			</configuration>
 			</plugin>
       		<plugin>
         		<groupId>org.apache.maven.plugins</groupId>
